# Depth-Aware-Shader-Effects-for-NeRF

./: README.md  apply_all_shaders.py  config.py  create_video.py  ensure_dirs.py  main.py  reconstruction_pipeline.py  render_aligned_spiral.py  run.py
shader_processor/: CMakeLists.txt  main.cpp  setup_instructions.md  shader.h
shader_processor/include/: shader.h  texture.h
shader_processor/include/glad/: glad.h
shader_processor/src/: glad.c  main.cpp  shader.cpp  texture.cpp
src/: dataset.py  models.py  post_processor.py  ray_utils.py  render.py  shader_editor.py  shader_system.py  train.py
src/post_processing/: processor.py
